--- a/pipelines/ichorCNA/config/config_hg38.yaml
+++ b/pipelines/ichorCNA/config/config_hg38.yaml
@@ -1,4 +1,5 @@
 ## read depth params ##
+## refer to the ichorCNA repo directly for any input files such as PoN and repTiming files etc. The repo is at https://github.com/GavinHaLab/ichorCNA
 readCounterScript:  /pathTo/readCounter # check the ichorCNA github for further information
 chrs:
   chr1,chr2,chr3,chr4,chr5,chr6,chr7,chr8,chr9,chr10,chr11,chr12,chr13,chr14,chr15,chr16,chr17,chr18,chr19,chr20,chr21,chr22,chrX,chrY
@@ -7,20 +8,20 @@ binSize:  1000000 # set window size to compute coverage
 ## ichorCNA params ##
 ichorCNA_numCores: 1
 ## EDIT
-ichorCNA_libdir: ../data/ichorCNA # include if ichorCNA R source files changed but package has not been updated within R
+ichorCNA_libdir: /ichorCNA/R/ #  # obtained from the ichorCNA repo  directly 
 # included in GitHub repo
-ichorCNA_rscript: ../data/runIchorCNA.R # obtained from the github directly for the suitable version/latest version
+ichorCNA_rscript: /inst/extdata/runIchorCNA.R # obtained from the ichorCNA repo  directly for the suitable version/latest version
 # use panel matching same bin size (optional)
 ##EDIT
-ichorCNA_normalPanel: ../data/HD_ULP_PoN_hg38_1Mb_normAutosomes_median.rds
+ichorCNA_normalPanel: /inst/extdata/HD_ULP_PoN_hg38_1Mb_normAutosomes_median.rds  # obtained from the ichorCNA repo  
 # must use gc wig file corresponding to same binSize (required)
-ichorCNA_gcWig: ../data/gc_hg38_1000kb.wig
+ichorCNA_gcWig: /inst/extdata/gc_hg38_1000kb.wig # obtained from the ichorCNA repo  
 # must use map wig file corresponding to same binSize (required)
-ichorCNA_mapWig:  ../data/map_hg38_1000kb.wig
-ichorCNA_repTimeWig: ../data/Koren_repTiming_hg38_1000kb.wig
+ichorCNA_mapWig:  /inst/extdata/map_hg38_1000kb.wig # obtained from the ichorCNA repo  
+ichorCNA_repTimeWig: /inst/extdata/Koren_repTiming_hg38_1000kb.wig # obtained from the ichorCNA repo  
 # use bed file if sample has targeted regions, eg. exome data (optional)
-ichorCNA_exons:  NULL
-ichorCNA_centromere:  ../data/GRCh38.GCA_000001405.2_centromere_acen.txt
+ichorCNA_exons:  NULL 
+ichorCNA_centromere:  /inst/extdata/GRCh38.GCA_000001405.2_centromere_acen.txt # obtained from the ichorCNA repo  
 ichorCNA_minMapScore: 0.75
 ichorCNA_chrs:  paste0('chr', c(1:22, \"X\"))
 ichorCNA_fracReadsInChrYForMale: 0.002
